--- a/src/uLearn.Web/Views/Course/_Quiz.cshtml
+++ b/src/uLearn.Web/Views/Course/_Quiz.cshtml
@@ -9,6 +9,7 @@
 	for (int blockIndex = 0; blockIndex < QuizSlide.Quiz.Blocks.Length; blockIndex++)
 	{
 		var quizBlock = QuizSlide.Quiz.Blocks[blockIndex];
+	    var quizModel = new QuizInfoModel(Model, quizBlock, blockIndex, passed);
 		if (quizBlock is CodeBlock)
 		{
 			<textarea class='code code-sample'>@quizBlock.Text</textarea>
@@ -25,80 +26,22 @@
 				@Html.Raw(quizBlock.Text.RenderMd())
 			}
 		}
-		if (quizBlock is ChoiceBlock)
-		{
-			var choiceQuizBlock = quizBlock as ChoiceBlock;
-			var isMultiply = choiceQuizBlock.Multiple;
-			var typeInp = isMultiply ? "checkbox" : "radio";
-			<div class="quiz-block-mark @typeInp" id='@(quizBlock.Id + "_quizBlock")'>
-				@for (int itemIndex = 0; itemIndex < choiceQuizBlock.Items.Length; itemIndex++)
-				{
-					var ident = isMultiply ? itemIndex + "noMult" : blockIndex.ToString();
-					var var = choiceQuizBlock.Items[itemIndex];
-					var ans = "";
-					if (passed && Model.AnswersToQuizes[quizBlock.Id].Contains(var.Id))
-					{
-						ans = "checked";
-					}
-					<div class="quiz">
-						<i></i>
-						<label><input @ans id='@(quizBlock.Id + "quizBlock" + var.Id)' name=@("group"+ident) type="@typeInp">@var.Description</label>
-					</div>
-				}
-			</div>
-		}
+	    if (quizBlock is ChoiceBlock)
+	    {
+	        @Html.Partial("_ChoiceBlock", quizModel)
+	    }
+		
 		else if (quizBlock is FillInBlock)
 		{
-			var value = "";
-			var quizRes = "";
-			var quizResSample = "none";
-			if (passed && Model.AnswersToQuizes[quizBlock.Id].FirstOrDefault() != null)
-			{
-				value = Model.AnswersToQuizes[quizBlock.Id].FirstOrDefault();
-				quizRes = Model.AnswersToQuizes[quizBlock.Id][1] == "False" ? "wrong-quiz" : "right-quiz";
-				quizResSample = Model.AnswersToQuizes[quizBlock.Id][1] == "False" ? "block" : "none";
-			}
-			var fillIn = quizBlock as FillInBlock;
-			var sample = fillIn.Sample;
-			<div class="quiz quiz-block-input">
-				<label>
-					<input class="@quizRes" value="@value" id='@(quizBlock.Id + "quizBlock")'>
-				</label>
-			</div>
-			<i style="display:@quizResSample" id='@(quizBlock.Id + "_" + "example" + "_quizItem")'>
-				Пример правильного варианта ответа: @sample
-			</i>
+		    @Html.Partial("_FillInBlock", quizModel)
 		}
 		else if (quizBlock is IsTrueBlock)
 		{
-			var tchecked = "";
-			var fchecked = "";
-			if (passed && Model.AnswersToQuizes[quizBlock.Id].FirstOrDefault() != null)
-			{
-				tchecked = Model.AnswersToQuizes[quizBlock.Id].FirstOrDefault() == "True" ? "checked" : "";
-				fchecked = Model.AnswersToQuizes[quizBlock.Id].FirstOrDefault() == "False" ? "checked" : "";
-			}
-			<div class="radio quiz-block-mark" id="@(quizBlock.Id + "_quizBlock")">
-				<div class="quiz">
-					<i></i>
-					<label><input @tchecked id='@(quizBlock.Id + "quizBlock" + "True")' name='@(quizBlock.Id+"group")' type="radio">True</label>
-				</div>
-				<div class="quiz">
-					<i></i>
-					<label><input @fchecked id='@(quizBlock.Id + "quizBlock" + "False")' name='@(quizBlock.Id+"group")' type="radio">False</label>
-				</div>
-			</div>
+		    @Html.Partial("_TrueFalseBlock", quizModel)
 		}
 	}
     <div style="display:none;" id="quizAns" data-url="@Url.Action("GetRightAnswersToQuiz")">none</div>
 	<div id="quizSub" data-url='@Url.Action("SubmitQuiz")'>
 		<button style="margin-top:10px; margin-bottom:5px;" class="btn btn-default" onclick="submitQuiz('@Model.Course.Id','@Model.SlideIndex','@Model.AnswersToQuizes.Count')">Submit my result</button>
-		<script src="~/Scripts/slide-quiz.js"></script>
-		<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-		@{var answers = passed ? (Model.Slide as QuizSlide).RightAnswersToQuiz : "none";}
-		@if (passed)
-		{
-		    <script> markAns('@answers') </script>
-		}
 	</div>
 }
