fixed sidebar width item glitch

--- a/src/uLearn.Web/Views/Shared/_TableOfContents.cshtml
+++ b/src/uLearn.Web/Views/Shared/_TableOfContents.cshtml
@@ -15,7 +15,7 @@
 				previousName = currentUnit;
 				groupNumber++;
 			}
-			<li class="units-list-item">
+		    <li style="width:100%" class="units-list-item">
 				<a data-toggle="collapse" href=@("#N" + groupNumber) class="units-list-item-text">
 					@currentUnit
 				</a>
