--- a/src/uLearn.Web/Views/Course/_SlideNavigation.cshtml
+++ b/src/uLearn.Web/Views/Course/_SlideNavigation.cshtml
@@ -1,16 +1,16 @@
 ﻿@model uLearn.CoursePageModel
 
-<div class="btn-group ctrl-group" style="width:100%" id="nav_arrows"
+<div class="btn-group ctrl-group full-width" id="nav_arrows"
 	 data-hasnext="@(Model.HasNextSlide?"true":"")"
 	 data-hasprev="@(Model.HasPrevSlide?"true":"")"
 	 data-isaccepted="@((Model.IsPassedTask&&!Model.IsSlideWithAcceptedSolutions)?"true":"")">
-	<a class="btn btn-default no-rounds ctrl-group" style="width:50%"
+    <a class="btn btn-default no-rounds ctrl-group half-width"
 	   id="prev_slide_button"
 	   href="@Url.Action("Slide", new {courseId = Model.Course.Id, slideIndex = Model.PrevSlideIndex})"><i class="glyphicon glyphicon-chevron-left"></i></a>
-	<a class="btn btn-default block-next no-rounds ctrl-group" style="width:50%"
+    <a class="btn btn-default block-next no-rounds ctrl-group half-width"
 	   id="next_solutions_button"
 	   href="@Url.Action("AcceptedSolutions", new { courseId = Model.Course.Id, slideIndex = Model.SlideIndex })"><i class="glyphicon glyphicon-chevron-right"></i></a>
-	<a class="btn btn-default block-next no-rounds ctrl-group" style="width:50%"
+    <a class="btn btn-default block-next no-rounds ctrl-group half-width"
 	   id="next_slide_button"
 	   href="@Url.Action("Slide", new {courseId = Model.Course.Id, slideIndex = Model.NextSlideIndex})"><i class="glyphicon glyphicon-chevron-right"></i></a>
 </div>
