Extract PrevNextButtons to Action with model

--- a/src/uLearn.Web/Views/Analytics/TotalStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/TotalStatistics.cshtml
@@ -5,7 +5,8 @@
 	ViewBag.Title = "Total statistics";
 }
 
-@Html.Action("RenderTOC", "Toc", new { courseId = Model.CourseId })
+
+@Html.Action("TableOfContents", "SlideNavigation", new { courseId = Model.CourseId })
 
 <body>
 	<div class="slide-container">
