--- a/src/uLearn.Web/Views/Course/_Quiz.cshtml
+++ b/src/uLearn.Web/Views/Course/_Quiz.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Text
-@using uLearn
+﻿@using uLearn
 @using uLearn.Quizes
 @model CoursePageModel
 @{ var QuizSlide = Model.Slide as QuizSlide;}
