--- a/src/uLearn.Web/Views/Course/_ExerciseHints.cshtml
+++ b/src/uLearn.Web/Views/Course/_ExerciseHints.cshtml
@@ -14,7 +14,7 @@
 			<button id="@(index+"likeHint")"
 					class="like-left-location btn btn-xs like-button @(slide.LikedHints.Contains(index) ? "btn-primary" : "btn-default")" 
 					data-url="@Url.Action("LikeHint")"
-					onclick="likeHint('@Model.Course.Id', '@Model.Slide.Id', '@index')"
+					onclick="likeHint('@Model.CourseId', '@Model.Slide.Id', '@index')"
 					title="Подсказка помогла!"><i class="glyphicon glyphicon-heart"></i></button>
 				@Html.Raw(hintHtml)
 		</div>
