--- a/src/uLearn.Web/Views/Course/_SolutionControl.cshtml
+++ b/src/uLearn.Web/Views/Course/_SolutionControl.cshtml
@@ -3,14 +3,7 @@
 @{ var slide = Model.Slide as ExerciseSlide; }
 <textarea id="secretCodeExercise" class='hide'>@slide.ExerciseInitialCode.EnsureEnoughLines(4)</textarea>
 <div class="sphere-engine-tm">Powered by <a target="blank" href="http://sphere-engine.com">Sphere Engine™</a> and <a target="blank" href="http://codemirror.net/">CodeMirror</a></div>
-@if (Model.IsPassedTask)
-{
-	<textarea class='code code-exercise'>@Model.LatestAcceptedSolution</textarea>
-}
-else
-{
-	<textarea class='code code-exercise'>@slide.ExerciseInitialCode.EnsureEnoughLines(4)</textarea>
-}
+<textarea class='code code-exercise'>@(@Model.LatestAcceptedSolution ?? slide.ExerciseInitialCode.EnsureEnoughLines(4))</textarea>
 <script>
 	function cleanUserCode() {
 		var $secretCodeExercise = $('#secretCodeExercise');
@@ -19,7 +12,7 @@ else
 </script>
 <div class="solution-control btn-group ctrl-group">
 	<button type="button" class="run-solution-button btn btn-primary no-rounds"
-			data-url="@Url.Action("RunSolution", new {courseId = Model.Course.Id, slideIndex = Model.SlideIndex})">
+			data-url="@Url.Action("RunSolution", new {courseId = Model.CourseId, slideIndex = Model.Slide.Index})">
 		RUN
 	</button>
 
@@ -27,7 +20,7 @@ else
 		RESET
 	</button>
 
-	<button id="GetHintButton" type="button" class="btn btn-default hints-btn no-rounds" onclick="showHintForUser('@Model.Course.Id','@Model.Slide.Id', '@slide.HintsHtml.Count()')">
+	<button id="GetHintButton" type="button" class="btn btn-default hints-btn no-rounds" onclick="showHintForUser('@Model.CourseId','@Model.Slide.Id', '@slide.HintsHtml.Count()')">
 		GET HINT
 	</button>
 </div>
