--- a/src/uLearn.Web/Views/SlideNavigation/PrevNextButtons.cshtml
+++ b/src/uLearn.Web/Views/SlideNavigation/PrevNextButtons.cshtml
@@ -1,16 +1,16 @@
 ﻿@model uLearn.PrevNextButtonsModel
 
-<div class="btn-group ctrl-group" style="width: 100%" id="nav_arrows"
-	data-hasnext="@(Model.HasNextSlide ? "true" : "")"
-	data-hasprev="@(Model.HasPrevSlide ? "true" : "")"
-	data-isaccepted="@((Model.IsPassedTask && !Model.OnSolutionsSlide) ? "true" : "")">
-	<a class="btn btn-default no-rounds ctrl-group" style="width: 50%"
-		id="prev_slide_button"
-		href="@Url.Action("Slide", "Course", new {courseId = Model.CourseId, slideIndex = Model.PrevSlideIndex})"><i class="glyphicon glyphicon-chevron-left"></i></a>
-	<a class="btn btn-default block-next no-rounds ctrl-group" style="width: 50%"
-		id="next_solutions_button"
-		href="@Url.Action("AcceptedSolutions", "Course", new {courseId = Model.CourseId, slideIndex = Model.SlideIndex})"><i class="glyphicon glyphicon-chevron-right"></i></a>
-	<a class="btn btn-default block-next no-rounds ctrl-group" style="width: 50%"
-		id="next_slide_button"
-		href="@Url.Action("Slide", "Course", new {courseId = Model.CourseId, slideIndex = Model.NextSlideIndex})"><i class="glyphicon glyphicon-chevron-right"></i></a>
+<div class="btn-group ctrl-group full-width" id="nav_arrows"
+	 data-hasnext="@(Model.HasNextSlide ? "true" : "")"
+	 data-hasprev="@(Model.HasPrevSlide ? "true" : "")"
+	 data-isaccepted="@((Model.IsPassedTask && !Model.OnSolutionsSlide) ? "true" : "")">
+	<a class="btn btn-default no-rounds ctrl-group half-width"
+	   id="prev_slide_button"
+	   href="@Url.Action("Slide", "Course", new {courseId = Model.CourseId, slideIndex = Model.PrevSlideIndex})"><i class="glyphicon glyphicon-chevron-left"></i></a>
+	<a class="btn btn-default block-next no-rounds ctrl-group half-width"
+	   id="next_solutions_button"
+	   href="@Url.Action("AcceptedSolutions", "Course", new {courseId = Model.CourseId, slideIndex = Model.SlideIndex})"><i class="glyphicon glyphicon-chevron-right"></i></a>
+	<a class="btn btn-default block-next no-rounds ctrl-group half-width"
+	   id="next_slide_button"
+	   href="@Url.Action("Slide", "Course", new {courseId = Model.CourseId, slideIndex = Model.NextSlideIndex})"><i class="glyphicon glyphicon-chevron-right"></i></a>
 </div>
