hints fixes, data-url fixes and more

--- a/src/uLearn.Web/Views/Course/_AskBar.cshtml
+++ b/src/uLearn.Web/Views/Course/_AskBar.cshtml
@@ -3,7 +3,7 @@
 	Задать вопрос по материалу
 </a>
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-	<div id="Ask"class="modal-dialog" data-url="@Url.Action("AddQuestion")">
+	<div id="AddQuestion" class="modal-dialog" data-url="@Url.Action("AddQuestion")">
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
