--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -32,7 +32,7 @@
 			</div>
 			@Html.Partial("_RatesBar")
 			@Html.Action("PrevNextButtons", "SlideNavigation", new { courseId = Model.CourseId, slideIndex = Model.Slide.Index, onSolutionsSlide = false })
-			<div id="WatchQuestions" data-url="@Url.Action("GetAllQuestions")">
+			<div id="GetAllQuestions" data-url="@Url.Action("GetAllQuestions")">
 				<button class="all-questions" onclick="printAllQuestions('@Model.Slide.Info.UnitName')">Посмотреть все заданные вопросы по теме</button>
 			</div>
 			<div class="questions-log"></div>
@@ -65,7 +65,9 @@
 	</script>
 	@if (Model.Slide is ExerciseSlide)
 	{
-		<script> getHints("@Model.CourseId", "@Model.Slide.Index"); </script>	}
+	    var e = (ExerciseSlide) Model.Slide;
+		<script> getHints("@Model.CourseId", "@Model.Slide.Index", '@e.HintsHtml.Length')</script>	
+	}
 
 	@{
 		var a = Model.PassedQuiz.Contains(Model.Slide.Id);
