--- a/src/uLearn.Web/Views/SlideNavigation/TableOfContents.cshtml
+++ b/src/uLearn.Web/Views/SlideNavigation/TableOfContents.cshtml
@@ -17,7 +17,7 @@
 					var url = Url.Action("Slide", "Course", new { courseId = Model.CourseId, slideIndex = slide.Index });
 
 					<i class="@GetIconClass(slide) navbar-label" title="@GetTitle(slide)"></i>
-					<li class="slide-list-item @(slide == Model.CurrentSlide ? "selected" : "") " onclick="window.location.href = '@url'">@slide.Title</li>
+				    <li class="slide-list-item @(slide == Model.CurrentSlide ? "selected" : "") " onclick="window.location.href = '@url'"><a href="@url">@slide.Title</a></li>
 				}
 			</ul>
 		</li>
