--- a/src/uLearn.Web/Jsdifflib/jsdifflib.css
+++ b/src/uLearn.Web/Jsdifflib/jsdifflib.css
@@ -1,13 +1,13 @@
 ﻿table.diff {
 	border-collapse:collapse;
-	border:1px solid darkgray;
+	border:1px solid lightblue/*darkgray*/;
     white-space: pre-wrap;
     table-layout: fixed;
     width: 100%;
 }
 
 table.diff tbody {
-    font-family: Courier, monospace;
+    font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
 }
 
 table.diff thead th:nth-child(2n+1) {
@@ -15,23 +15,23 @@ table.diff thead th:nth-child(2n+1) {
 }
 
 table.diff tbody th {
-	font-family:verdana,arial,'Bitstream Vera Sans',helvetica,sans-serif;
-	background:#EED;
+	font-family:Monaco, Menlo, Consolas, "Courier New", monospace;/*verdana,arial,'Bitstream Vera Sans',helvetica,sans-serif;*/
+	background:aliceblue/*#EED*/;
 	font-size:11px;
 	font-weight:normal;
-	border:1px solid #BBC;
-	color:#886;
-	padding:.3em .5em .1em 2em;
-	text-align:right;
+	border:1px solid lightblue/*#BBC*/;
+	color:#428bca/*#886*/;
+	/*padding:.3em .5em .1em 2em;*/
+	text-align:center !important;
     vertical-align: top;
 }
 table.diff thead {
-	border-bottom:1px solid #BBC;
-	background:#EFEFEF;
+	border-bottom:1px solid lightblue/*#BBC*/;
+	background: aliceblue; /*#EFEFEF;*/
     font-family: Verdana;
 }
 table.diff thead th.texttitle {
-    text-align: left;
+    text-align: center;
 }
 table.diff tbody td {
 	padding:0px .4em;
@@ -39,29 +39,30 @@ table.diff tbody td {
 	vertical-align:top;
 }
 table.diff .empty {
-	background-color:#DDD;
+	background-color:white/*#DDD*/;
 }
 table.diff .replace {
-    background-color: #E99;
+    background-color: lightcoral/*#E99*/;
 }
 table.diff .delete {
-	background-color:#E99;
+	background-color: lightcoral/*#E99*/;
     max-width: inherit;
 }
 table.diff .skip {
 	background-color:#EFEFEF;
-	border:1px solid #AAA;
-	border-right:1px solid #BBC;
+	border:1px solid lightblue/*#AAA*/;
+	border-right:1px solid lightblue/*#BBC*/;
 }
 table.diff .insert {
-    background-color: #9E9;
+    background-color: lightgreen/*#9E9*/;
 }
 
 table.diff .equal {
-    background-color: #9E9;
+    background-color: lightgreen/*#9E9*/;
+	border-color: aliceblue;
 }
 table.diff th.author {
-	text-align:right;
-	border-top:1px solid #BBC;
+	text-align:center;
+	border-top:1px solid lightblue/*#BBC*/;
 	background:#EFEFEF
 }
