--- a/src/uLearn.Web/Views/Course/_Quiz.cshtml
+++ b/src/uLearn.Web/Views/Course/_Quiz.cshtml
@@ -1,5 +1,6 @@
 ﻿@using uLearn
 @using uLearn.Quizes
+@using CodeBlock = uLearn.Quizes.CodeBlock
 @model CoursePageModel
 @{ var QuizSlide = Model.Slide as QuizSlide;}
 @if (QuizSlide != null)
