--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -22,25 +22,28 @@
 			</div>
 			@Html.Partial("_RatesBar")
 			@Html.Action("PrevNextButtons", "SlideNavigation", new { courseId = Model.CourseId, slideIndex = Model.Slide.Index, onSolutionsSlide = false })
-			<div id="GetAllQuestions" data-url="@Url.Action("GetAllQuestions")">
-				<button class="all-questions" onclick="printAllQuestions('@Model.Slide.Info.UnitName')">Посмотреть все заданные вопросы по теме</button>
-			</div>
-			<div class="questions-log"></div>
+			@if (User.IsInRole(LmsRoles.Instructor))
+			{
+				<div id="GetAllQuestions" data-url="@Url.Action("GetAllQuestions")">
+					<button class="all-questions" onclick="printallquestions('@Model.Slide.Info.UnitName')">Посмотреть все заданные вопросы по теме</button>
+				</div>
+				<div class="questions-log"></div>
+			}
 		</div>
 	</div>
 
 	<div>
-		@if (Request.IsLocal)
+		@if (User.IsInRole(LmsRoles.Admin))
 		{
 			<div class="modal-footer">
 				<a href="#" class="prepare-solution-button" data-url="@Url.Action("PrepareSolution", "Exercise", new {courseId = Model.CourseId, slideIndex = Model.Slide.Index})">Log prepared solution</a>				<a href="#" onclick="toggleFakeRun()">Переключить в тестовый режим запуска</a>
 				<script>
-				    function toggleFakeRun() {
-				        var $btn = $(".run-solution-button");
-				        $btn
-				            .css("background-color", "blue")
-				            .data("url", $btn.data("url").replace("/RunSolution", "/FakeRunSolution"));
-				    }
+					function toggleFakeRun() {
+						var $btn = $(".run-solution-button");
+						$btn
+							.css("background-color", "blue")
+							.data("url", $btn.data("url").replace("/RunSolution", "/FakeRunSolution"));
+					}
 				</script>
 			</div>
 		}
@@ -51,20 +54,20 @@
 	@Scripts.Render("~/slide-js")
 	<script src="~/Scripts/slide-stats.js"></script>
 	<script>
-	    fillRate('@Model.Rate');
+		fillRate('@Model.Rate');
 	</script>
 	@if (Model.Slide is ExerciseSlide)
 	{
-		var e = (ExerciseSlide)Model.Slide;
-		<script> getHints("@Model.CourseId", "@Model.Slide.Index", '@e.HintsHtml.Length')</script>
-	    <script> refreshPreviousDraft('@(Model.LatestAcceptedSolution != null)', '@e.Id')</script>
+		var e = (ExerciseSlide) Model.Slide;
+		<script> getHints("@Model.CourseId", "@Model.Slide.Index", '@e.HintsHtml.Length') </script>
+		<script> refreshPreviousDraft('@(Model.LatestAcceptedSolution != null)', '@e.Id') </script>
 	}
 
 	@{
 		var a = Model.PassedQuiz.Contains(Model.Slide.Id);
 		var b = Model.Slide is QuizSlide;
 		var answers = a && b ? (Model.Slide as QuizSlide).RightAnswersToQuiz : "none";
-		<script> markAns('@answers')</script>
+		<script> markAns('@answers') </script>
 	}
 }
 
